# RikPy

./: .gitignore  CHANGELOG.md  README.md  manifest.in  pyproject.toml
.github/workflows/: pypi-publish.yml  release-please.yml
RikPy/: .gitignore  commonairtable.py  commonfunctions.py  commongoogle.py  commonheroku.py  commonleonardo.py  commonlogging.py  commonopenai.py  commons3.py  commonshopify.py  customresponse.py
