[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rikpy"
version = "2.0.8"
description = "Python package by Rik "
authors = [
    { name = "Rik", email = "richard@blipi.me" }
]
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/rfp-byte/RikPy"

[tool.hatch.build.targets.wheel]
packages = ["RikPy"]

# Trigger release-please workflow  